--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -4,6 +4,7 @@
   height: 100%;
   width: 200px;
   min-width: 200px;
+  padding-top: 5px;
 }
 
 .menu {
@@ -32,5 +33,5 @@
 }
 
 .content {
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
