--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -2,9 +2,10 @@
   background-color: #2a3855;
   box-shadow: 1px 1px 2px #9b9b9b;
   height: 100%;
-  width: 200px;
   min-width: 200px;
   padding-top: 5px;
+  text-align: center;
+  width: 200px;
 }
 
 .menu {
