--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -16,6 +16,8 @@
 
 .sidebarItem {
   align-items: center;
+  background: none;
+  border: 0;
   box-shadow: inset 0 0 5px #0f141f;
   color: #ddd;
   cursor: pointer;
@@ -23,6 +25,7 @@
   height: 50px;
   justify-content: center;
   user-select: none;
+  width: 100%;
 }
 
 .sidebarItem:hover {
