--- a/src/containers/Game/style.css
+++ b/src/containers/Game/style.css
@@ -1,9 +1,12 @@
 .game {
   align-items: center;
   color: #d6d6d6;
+  display: flex;
+  flex-direction: column;
   padding: 0 50px;
   padding-top: 100px;
   overflow-y: auto;
+  width: 100%;
 }
 
 .thumbnail {
@@ -18,5 +21,7 @@
 
 .description {
   font-size: 1.2em;
+  line-height: 1.8em;
   text-align: justify;
+  max-width: 700px;
 }
