--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -1,6 +1,7 @@
 .button {
   background: none;
-  border: 1px solid #b1b1b1;
+  background-color: #2b55a3;
+  border: 0;
   border-radius: 2px;
   color: #d8d8d8;
   cursor: pointer;
