--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -10,7 +10,7 @@
 }
 
 .modal {
-  background-color: #2a3855;
+  background-color: #e2e2e2;
   display: flex;
   min-height: 400px;
   min-width: 500px;
