--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -1,9 +1,10 @@
 .sidebar {
-  background-color: #2a3855;
+  background-color: rgba(0, 0, 0, .5);
   box-shadow: 1px 1px 2px #9b9b9b;
   height: 100%;
   min-width: 200px;
   padding-top: 5px;
+  position: fixed;
   text-align: center;
   width: 200px;
 }
@@ -18,18 +19,21 @@
   align-items: center;
   background: none;
   border: 0;
-  box-shadow: inset 0 0 5px #0f141f;
+  border-top: 1px solid #686868;
+  border-bottom: 1px solid #686868;
   color: #ddd;
   cursor: pointer;
   display: flex;
   height: 50px;
   justify-content: center;
   user-select: none;
+  margin-bottom: 5px;
+  outline: none;
   width: 100%;
 }
 
 .sidebarItem:hover {
-  background-color: #1414145b;
+  background-color: rgba(0, 0, 0, .5);
 }
 
 .sidebarItem:active {
