--- a/src/components/TextInput/style.css
+++ b/src/components/TextInput/style.css
@@ -1,5 +1,5 @@
 .textinput {
-  color: #f0f0f0;
+  color: #333333;
   display: flex;
   flex-direction: column;
   font-size: .9em;
@@ -8,13 +8,13 @@
 .input {
   background: none;
   border: 0;
-  border-bottom: 1px solid #bbbbbb;
-  color: #ddd;
+  border-bottom: 1px solid #224aa1;
+  color: #1f1f1f;
   font-size: 1em;
   outline: none;
   padding: 5px 0;
 }
 
 .input:focus {
-  border-bottom: 1px solid #ebebeb;
+  border-bottom: 1px solid #5479ca;
 }
