--- a/src/containers/App/style.css
+++ b/src/containers/App/style.css
@@ -1,4 +1,5 @@
 .app {
+  background-image: linear-gradient( rgba(0, 0, 0, .95), rgba(0, 0, 0, 1) );
   display: flex;
   width: 100%;
   height: 100%;
